--- a/2018-05-07/juzhuoyue/shishi.html
+++ b/2018-05-07/juzhuoyue/shishi.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
 		<title>实时票房</title>
@@ -9,33 +8,44 @@
 	</head>
 
 	<body>
-		<div id="rdpo" style="width: 600px;height: 400px;"></div>
+		<div id="main" style="width: 800px;height: 500px;"></div>
 		<script>
-			function myData(text) {
-				var xA = [];
-				var yA = [];
-				for(var i = 0; i < text.data.length; i++) {
-					xA.push(text.data[i].MovieName);
-					yA.push(text.data[i].BoxOffice);
+			function myHq() {
+				$.ajax({
+					type: "get",
+					url: "http://api.shenjian.io/",
+					data: {appid: "dd648129b0e17057b8901c27f4a88021"},
+					dataType: "jsonp",
+					//对该成功获取的数据进行处理
+					success: function(data) {
+						var xA = [];
+						var yA = [];
+				//通过两个循环遍历对对获取到的数据进行清洗
+				for(var i = 0; i < data.data.length; i++) {
+					xA.push(data.data[i].MovieName);
 				}
-				var myChart = echarts.init(document.getElementById('rdpo'));
+				for(var n = 0; n < data.data.length; n++) {
+				
+					yA.push(data.data[n].BoxOffice);
+				}
+				var myChart = echarts.init(document.getElementById('main'));
 				var option = {
-					 color: ['#FF8C00'],
+					color: ['#FFFF00'],
 					title: {
-						text: '实时票房'
+						text: '实时票房',
 					},
 					tooltip: {},
 					legend: {
 						data: ['金额/万元']
 					},
 					grid: {
-						y2: 140
+						y2: 150   //调整显示y轴的具体长度
 					},
 					xAxis: {
 						data: xA,
 						axisLabel: {
-							interval: 0,
-							rotate: -25
+							interval: 0,//横轴信息全部显示
+							rotate: -30//-30度角倾斜显示
 						}
 					},
 					yAxis: {},
@@ -46,24 +56,10 @@
 					}]
 				};
 				myChart.setOption(option);
-			};
-			function lianjie() {
-				$.ajax({
-					type: "get",
-					url: "http://api.shenjian.io/",
-					data: {
-						appid: "dd648129b0e17057b8901c27f4a88021"
-					},
-					dataType: "jsonp",
-					success: function(data) {
-						myData(data)
 					}
+					
 				});
 			};
-			
-			lianjie();
-			
+			myHq();
 		</script>
 	</body>
-
-</html>
