--- a/2018-05-07/mazhichao/readme.html
+++ b/2018-05-07/mazhichao/readme.html
@@ -1,76 +1,57 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>ECharts</title>
-    <!-- 引入 echarts.js -->
-    <script src="echarts.js"></script>
-    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-</head>
-<body>
-    <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-    <div id="main" style="width: 600px;height:350px;"></div>
-    <script type="text/javascript">
-        // 基于准备好的dom，初始化echarts实例
-        function myData(text) {
-        	var xA = [];
-			var yA = [];
-			for(var i = 0; i < text.data.length; i++) {
-				xA.push(text.data[i].MovieName);
-				yA.push(text.data[i].BoxOffice);
-			}
-        	var myChart = echarts.init(document.getElementById('main'));
-        	// 指定图表的配置项和数据
-        	var option = {
-            	title: {
-					show:true,
-                	text: '实时票房',
-					left:'left',
-					borderColor:'red',
-					textStyle:{
-						fontSize:20
-					}
-            	},
-            	tooltip: {
-					trigger:'axis' //可视化
+	<head>
+		<meta charset="utf-8">
+		<title>实时票房</title>
+		<script src="echarts.js"></script>
+		<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	</head>
+	<body>
+		<div id="res" style="width: 800px;height: 400px;"></div>
+		<script>
+		$.ajax({
+			type: "get",
+			url: "http://api.shenjian.io/",
+			data: {
+				appid: "dd648129b0e17057b8901c27f4a88021"
+			},
+			dataType: "jsonp",
+			success: function(cs) {
+				var x1 = [];
+				var y1 = [];
+				for(var i = 0; i < cs.data.length; i++) {
+					x1.push(cs.data[i].MovieName);
+					y1.push(cs.data[i].BoxOffice);
+				}
+				var myChart = echarts.init(document.getElementById('res'));
+				var option = {
+
+				legend: {
+					data: ['实时票房']
 				},
-            	legend: {
-                	data:['金额/万元']	
-            	},
 				grid: {
 					y2: 140
 				},
 				xAxis: {
-					data: xA,
+					name:'电影名称',
+					data: x1,
 					axisLabel: {
 						interval: 0,
-						rotate: -25
+						rotate: -30
 					}
 				},
-				yAxis: {},
+				yAxis: {
+					name:'金额/万元'
+				},
 				series: [{
-					name: '金额/万元',
+					name: '实时票房',
 					type: 'bar',
-					data: yA,
+					data: y1,
 				}]
 			};
 			myChart.setOption(option);
-		};
-        // 使用刚指定的配置项和数据显示图表。
-        function myJson() {
-			$.ajax({
-				type: "get",
-				url: "http://api.shenjian.io/",
-				data: {
-					appid: "dd648129b0e17057b8901c27f4a88021"
-				},
-				dataType: "jsonp",
-				success: function(data) {
-					myData(data)
-				}
-			});
-		};
-		myJson();
-    </script>
-</body>
+			}
+		});
+		</script>
+	</body>
 </html>
