--- a/2018-05-13/jixinxing/index.html
+++ b/2018-05-13/jixinxing/index.html
@@ -8,6 +8,9 @@
 		<script src="http://echarts.baidu.com/dist/echarts.js"></script>
 		<script src="js/ajax.js"></script>
 		<script src="js/echarts.js"></script>
+		<script>
+			topJson("http://api.shenjian.io/", "dd648129b0e17057b8901c27f4a88021", "get", "jsonp")
+		</script>
 	</head>
 
 	<body>
